syntax = "proto3";

option go_package = "./pkg/proto";

import "google/protobuf/timestamp.proto";

service UserService{
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message User{
    string id = 1;
    string user_name = 2;
    string email = 3;
    uint64 age = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message ListUsersRequest{
    int32 page = 1;
    int32 per_page = 2;
}

message ListUsersResponse{
    repeated User rows = 1;
    int32 total = 2;
    int32 total_pages = 3;
}

message GetUserRequest{
    string id = 1;
}

message GetUserResponse{
    string id = 1;
    string user_name = 2;
    uint64 age = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

message CreateUserRequest{
    string user_name = 1;
    string email = 2;
    uint64 age = 3;
}

message CreateUserResponse{}

message UpdateUserRequest{
    string id = 1;
    string user_name = 2;
    string email = 3;
    uint64 age = 4;
}

message UpdateUserResponse{}

message DeleteUserRequest{
    string id = 1;
}

message DeleteUserResponse{}






